deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otus-app
  template:
    metadata:
      labels:
        app: otus-app
    spec:
      containers:
        - name: otus
          image: chill38/otus:v2
          ports:
            - name: web
              containerPort: 8080
          #livenessProbe:
          #  httpGet:
          #    port: 8080
          #    path: /
          #  initialDelaySeconds: 10
          #  periodSeconds: 5
          #  timeoutSeconds: 2
          #readinessProbe:
          #  httpGet:
          #    port: 8080
          #    path: /health
          #  initialDelaySeconds: 10
          #  periodSeconds: 5
