service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: otus-app # Имя в deployment'е
  ports:
    - protocol: TCP
      port: 9000 # PORT наружу
      targetPort: web # PORT в контейнере (deployment'е)
  type: NodePort
